committing latest changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,6 @@
 body{
-	width: 1357px;
+	width: 960px;
 	background-image: url("../images/background_3.png");
-}
-aside{
-	background-color: white;
-	margin: 40px 0px 0px 0px;
-	width: 240px;
-	float: right;
-	border: 1px solid #dddddd;
 }
 nav{
 	width: 960px;
@@ -22,8 +15,36 @@ section{
 	border: 1px solid #dddddd;
 	width: 600px;
 }
+aside{
+	background-color: white;
+	margin: 40px 0px 0px 0px;
+	width: 240px;
+	float: right;
+	border: 1px solid #dddddd;
+}
+h3{
+	font-family:"Georgia";
+	font-size: 18px;
+	font-weight: bold;
+}
+footer{
+	border-top: 10px solid #4aaaa5;
+	background-color: #666666;
+	width: 1116px;
+	height: 100px;
+	float: left;
+}
+.portimg {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 178px;
+}
+.portimg:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 .pageheader{
-	width: 1357px;
+	width: 1116px;
 	background-color: white;
 	float: left;
 	border-bottom: 2px solid #cccccc;
@@ -84,18 +105,6 @@ section{
 .nodec{
 	text-decoration: none;
 }
-h3{
-	font-family:"Georgia";
-	font-size: 18px;
-	font-weight: bold;
-}
-footer{
-	border-top: 10px solid #4aaaa5;
-	background-color: #666666;
-	width: 1357px;
-	height: 100px;
-	float: left;
-}
 .maintitle{
 	font-family:"Georgia";
 	color: #4aaaa5;
@@ -124,4 +133,24 @@ footer{
 }
 #bio{
 	line-height: 2.0em;
+}
+.textbox{
+	margin-bottom: 10px;
+	padding: 5px;
+	width: 600px;
+}
+#messagebox{
+	height: 200px;
+}
+.btnSubmit{
+	background-color: #4aaaa5;
+	font-family:"Georgia";
+	color: white;
+	border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
 }
